--- a/smock.css
+++ b/smock.css
@@ -5,7 +5,7 @@
 *	Copyright (c) Alfredo Barron   2013. All rights reserved
 *	Version       1.1
 *	Created       03/10/2013
-*	Last modified 06/11/2013
+*	Last modified 12/11/2013
 *	Email         contacto@alfredobarron.com
 *	Web           http://www.alfredobarron.com
 *	========================================================================
@@ -127,6 +127,17 @@
 	-moz-box-shadow:    0px 2px 10px #ccc; /* Firefox */
 }
 
+
+
+
+
+/*  ELIMINA LOS SPIN DE LOS INPUT TYPE NUMBER
+	======================================================================== */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 
 
 
