--- a/smoke/css/smoke.css
+++ b/smoke/css/smoke.css
@@ -22,9 +22,12 @@
 |---------------------------------------------------------------------
 */
 .smk-error-text{
+	position: absolute;
+	right: 0;
+	font-size: 12px;
 	color: #EE4124;
-	float: right;
-	font-size: 12px
+	/*float: right;*/
+
 }
 .smk-select .smk-error-icon{
 	right: 10px;
@@ -45,7 +48,7 @@
 */
 .smk-alert-content{
 	position:fixed;
-	width:330px;
+	width:360px;
 	top: 0;
 	right:20px;
 	z-index:2060;
@@ -58,6 +61,9 @@
 	font-size: 20px;
 	float: left;
 	margin-right: 14px;
+}
+.smk-alert p{
+	display: table;
 }
 
 
@@ -92,6 +98,47 @@
 	-webkit-box-shadow:0 5px 25px -1px #333; /* Chrome & Safari */
 	-moz-box-shadow:0 5px 25px -1px #333; /* Firefox */
 }
+
+
+
+
+
+
+/*
+|---------------------------------------------------------------------
+|   Progress
+|---------------------------------------------------------------------
+*/
+.smk-progressbar{
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(255,255,255,0.4);
+	z-index: 10000;
+}
+.smk-progressbar .progress {
+	width: 100%;
+	height: 4px;
+	background-color: transparent;
+	border-radius: 0;
+}
+.smk-progressbar .progress-bar{
+	background: #28A8E0;
+}
+/*.progress-bar{
+	-webkit-animation: myfirst 1s;
+	animation: myfirst 1s;
+}
+@-webkit-keyframes myfirst {
+	from {width: 0;}
+	to {width: 95%;}
+}
+@keyframes myfirst {
+	from {width: 0;}
+	to {width: 95%;}
+}*/
 
 
 
