Se actualizo a la version 2.0.3
Se mejoro la función smkDate()
-Se agrego multilenguaje
-Se mejoro el formato de fecha
Se agrego la función smkDatePicker()
-Extension para el plugin bootstrap-datepicker.js
-Esta sirve para convertir el resultado de la función getDate() a
formato para base de datos yyyy-mm-dd
Se actualizo la licencia al 2015

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,11 @@
 .white{
 	margin-top: 40px;
 }
+.white .row:first-child{
+	margin-top: 0;
+}
 .white .row{
-	margin-top: 120px;
+	margin-top: 80px;
 }
 .white .col-xs-12 a{
 	font-family: 'Poiret One', Arial !important;
