--- a/smoke/css/smoke.css
+++ b/smoke/css/smoke.css
@@ -164,6 +164,17 @@ input[type=number]::-webkit-outer-spin-button {
 	margin: 0;
 }
 
+
+/*
+|---------------------------------------------------------------------
+|	Al agregar padding a un div evita que su tamaño crezca
+|---------------------------------------------------------------------
+*/
+.smk-sizing{
+	box-sizing: border-box;
+}
+
+
 /* Transition */
 .smk-transition1 {
 	transition: all .2s ease-in-out;
