--- a/docs/templates/fv-numberrange.html
+++ b/docs/templates/fv-numberrange.html
@@ -1,6 +1,6 @@
 <form id="formNumberRange">
   <div class="form-group">
-    <label class="control-label">Number</label>
+    <label class="control-label">Number range (2015-2020)</label>
     <div class="input-group">
       <input type="text" class="form-control" data-smk-type="number" data-smk-min="2015" data-smk-max="2020" required>
       <span class="input-group-btn">
