--- a/docs/templates/fv-rangecharacter.html
+++ b/docs/templates/fv-rangecharacter.html
@@ -1,6 +1,6 @@
 <form id="formRangeChar">
   <div class="form-group">
-    <label class="control-label">Range Character</label>
+    <label class="control-label">Range Character (8)</label>
     <input type="text" class="form-control" minlength="4" maxlength="8" required>
   </div>
   <button type="submit" class="btn btn-default" id="btnRangeChar">Submit</button>
