--- a/templates/fv-clear.html
+++ b/templates/fv-clear.html
@@ -4,11 +4,11 @@
     <input type="text" class="form-control" value="Text">
   </div>
   <div class="form-group">
-    <label class="control-label">Disabled input (not clear)</label>
-    <input type="text" class="form-control" disabled required value="Disabled">
+    <label class="control-label">Disabled input (Not clear)</label>
+    <input type="text" class="form-control" value="Disabled" data-smk-noclear disabled>
   </div>
   <div class="form-group">
-    <label class="control-label">Text 2 (No clear)</label>
+    <label class="control-label">Text 2 (Not clear)</label>
     <input type="text" class="form-control" value="Text 2" data-smk-noclear>
   </div>
   <div class="form-group">
