--- a/templates/fv-numbercharacter.html
+++ b/templates/fv-numbercharacter.html
@@ -1,6 +1,6 @@
 <form id="formNumberChar">
   <div class="form-group">
-    <label class="control-label">Number Character</label>
+    <label class="control-label">Number Character (4-8)</label>
     <input type="text" class="form-control" minlength="8" maxlength="8" required>
   </div>
   <button type="submit" class="btn btn-default" id="btnNumberChar">Submit</button>
