--- a/docs/templates/fv-email.html
+++ b/docs/templates/fv-email.html
@@ -1,7 +1,7 @@
 <form class="form-inline" id="formEmail">
   <div class="form-group">
     <label class="control-label">Email</label>
-    <input type="email" class="form-control" id="email" required>
+    <input type="email" class="form-control" ng-model="email" data-smk-icon="glyphicon-asterisk" required>
   </div>
   <button type="submit" class="btn btn-default" ng-click="validateEmail()">Submit</button>
 </form>
