--- a/templates/gs-included.html
+++ b/templates/gs-included.html
@@ -15,4 +15,6 @@ smoke/
     ├── pt_br.js
     └── pt_br.min.js
     ├── it.js
-    └── it.min.js
+    ├── it.min.js
+    ├── ru.js
+    └── ru.min.js
